--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ConfigActivity"></activity>
         <activity android:name=".MainActivity"></activity>
-        <activity android:name=".RateActivity">
+        <activity android:name=".QueryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
